# pysymbolcheck

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  basic_rules.json  example_rules.json  pyproject.toml  pysymbolcheck.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: autorelease.yml  pythonpackage.yml
pysymbolcheck/: __main__.py  basic_rules.json
